--- a/public/index.html
+++ b/public/index.html
@@ -2,229 +2,192 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EEI Single URL Audit — Internal</title>
+  <title>exmxc.ai — Entity Engineering Index</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Tailwind CDN (no build step) -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     body {
-      background-color: #f9fafb;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background: #020617;
+      color: #e5e7eb;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
     }
-    .json-box {
-      background-color: #020617;
-      color: #e2e8f0;
-      padding: 1rem;
+    .card {
+      background: #020617;
+      border: 1px solid #1e293b;
       border-radius: 0.75rem;
-      font-size: 0.85rem;
-      white-space: pre-wrap;
-      overflow-x: auto;
     }
-    .badge {
-      font-size: 0.7rem;
-      padding: 0.15rem 0.5rem;
-      border-radius: 999px;
+    .muted {
+      color: #94a3b8;
     }
   </style>
 </head>
 
-<body class="max-w-6xl mx-auto py-10 px-5">
+<body class="min-h-screen">
 
-<header class="mb-8">
-  <div class="flex justify-between items-start">
-    <div>
-      <h1 class="text-3xl font-bold text-gray-900">
-        EEI Single URL Audit <span class="text-xs text-gray-500">INTERNAL</span>
-      </h1>
-      <p class="text-sm text-gray-600 mt-1">
-        exmxc.ai · Entity Engineering Index — full 13-signal diagnostic
+  <!-- Header -->
+  <header class="border-b border-slate-800 p-6">
+    <h1 class="text-xl font-semibold tracking-tight">Entity Engineering Index</h1>
+    <p class="muted text-sm">AI-search capability & intent diagnostics</p>
+  </header>
+
+  <!-- Input -->
+  <section class="p-6 max-w-5xl mx-auto">
+    <div class="flex gap-3">
+      <input
+        id="urlInput"
+        placeholder="https://example.com"
+        class="flex-1 bg-slate-900 border border-slate-700 rounded px-3 py-2 text-sm"
+      />
+      <button
+        id="runBtn"
+        class="bg-indigo-600 hover:bg-indigo-500 px-4 py-2 rounded text-sm font-medium"
+      >
+        Run Audit
+      </button>
+    </div>
+  </section>
+
+  <!-- Results -->
+  <main id="results" class="hidden max-w-5xl mx-auto p-6 space-y-6">
+
+    <!-- HERO -->
+    <section class="card p-6 grid md:grid-cols-3 gap-6">
+      <div class="md:col-span-2">
+        <h2 id="entityName" class="text-2xl font-semibold"></h2>
+        <p id="quadrant" class="text-lg mt-2"></p>
+        <p id="interpretation" class="muted mt-3 text-sm"></p>
+      </div>
+
+      <div class="flex flex-col gap-3">
+        <span id="capabilityChip" class="px-3 py-1 rounded-full text-sm w-fit"></span>
+        <span id="intentChip" class="px-3 py-1 rounded-full text-sm w-fit"></span>
+        <span id="observedChip" class="px-3 py-1 rounded-full text-sm w-fit"></span>
+      </div>
+    </section>
+
+    <!-- CAPABILITY -->
+    <section class="card p-6">
+      <h3 class="font-medium">Entity Capability (Static Crawl)</h3>
+      <p class="muted text-sm mb-4">
+        Structural clarity derived exclusively from static crawl.
       </p>
-    </div>
-    <div class="text-xs text-gray-500 text-right">
-      <div>Powered by <strong>exmxc.ai</strong></div>
-      <div id="timestamp"></div>
-    </div>
-  </div>
-</header>
 
-<section class="bg-white border rounded-xl p-4 mb-6 shadow-sm">
-  <label class="text-xs text-gray-600">URL to audit</label>
-  <div class="flex gap-2 mt-1">
-    <input id="urlInput" class="flex-1 border rounded px-3 py-2 text-sm" placeholder="example.com" />
-    <button id="runButton" class="bg-black text-white px-4 py-2 rounded">
-      Run Audit
-    </button>
-  </div>
-</section>
-
-<section class="bg-amber-50 border border-amber-200 rounded-xl p-6 mb-8">
-  <div class="flex justify-between gap-6">
-
-    <div>
-      <div id="entityName" class="text-sm font-semibold text-gray-800"></div>
-
-      <div class="flex items-center gap-2 mt-1">
-        <div id="scoreDisplay" class="text-3xl font-bold">EEI: -- / 100</div>
-        <span id="scoreBadge" class="badge bg-gray-200">Awaiting</span>
+      <div class="w-full bg-slate-800 rounded h-4 overflow-hidden">
+        <div id="capabilityBar" class="h-4"></div>
       </div>
 
-      <div class="w-full h-3 bg-gray-200 rounded-full mt-3">
-        <div id="scoreBar" class="h-3 rounded-full"></div>
-      </div>
+      <p id="capabilityScore" class="mt-2 text-sm muted"></p>
+    </section>
 
-      <div class="mt-2">
-        <div id="entityStage" class="font-semibold"></div>
-        <div id="entityVerb" class="text-xs text-gray-700"></div>
-        <div id="entityFocus" class="text-xs text-gray-500"></div>
-      </div>
-    </div>
+    <!-- INTENT -->
+    <section class="card p-6">
+      <h3 class="font-medium">AI Intent Signals (Observed)</h3>
+      <p class="muted text-sm mb-4">
+        Detected via rendered crawl. Not scored.
+      </p>
 
-    <div class="bg-white border rounded-lg p-3 w-64 text-xs">
-      <div class="flex justify-between mb-1">
-        <span class="font-semibold">Crawl Health</span>
-        <span id="crawlHealthScore" class="badge bg-gray-200">--</span>
-      </div>
-      <div id="crawlHealthCategory" class="mb-1">—</div>
-      <ul id="crawlHealthNotes" class="list-disc pl-4 space-y-0.5"></ul>
-    </div>
+      <ul id="intentSignals" class="list-disc list-inside space-y-1 muted text-sm"></ul>
+    </section>
 
-  </div>
-</section>
+    <!-- EVIDENCE -->
+    <section class="card p-6">
+      <details>
+        <summary class="cursor-pointer font-medium">View Evidence</summary>
+        <div id="breakdown" class="mt-4 space-y-2 text-sm"></div>
+      </details>
+    </section>
 
-<section class="mb-8">
-  <h2 class="text-sm font-semibold mb-2">Tier Summary</h2>
-  <div class="grid grid-cols-3 gap-3 text-xs">
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 1</strong>
-      <div id="tier1Score">--</div>
-      <div class="h-2 bg-gray-200 rounded"><div id="tier1Bar" class="h-2 rounded"></div></div>
-      <div id="tier1Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 2</strong>
-      <div id="tier2Score">--</div>
-      <div class="h-2 bg-gray-200 rounded"><div id="tier2Bar" class="h-2 rounded"></div></div>
-      <div id="tier2Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 3</strong>
-      <div id="tier3Score">--</div>
-      <div class="h-2 bg-gray-200 rounded"><div id="tier3Bar" class="h-2 rounded"></div></div>
-      <div id="tier3Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-  </div>
-</section>
+  </main>
 
-<section class="mb-10">
-  <h2 class="text-sm font-semibold mb-4">13 Signal Breakdown</h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-sm">
-    <div class="bg-white border rounded-xl p-4"><h3 class="font-semibold mb-2">Meta Signals</h3><div id="metaSignals" class="space-y-4"></div></div>
-    <div class="bg-white border rounded-xl p-4"><h3 class="font-semibold mb-2">Schema Signals</h3><div id="schemaSignals" class="space-y-4"></div></div>
-    <div class="bg-white border rounded-xl p-4"><h3 class="font-semibold mb-2">Lattice & Crawl Signals</h3><div id="latticeSignals" class="space-y-4"></div></div>
-    <div class="bg-white border rounded-xl p-4"><h3 class="font-semibold mb-2">Content Signals</h3><div id="contentSignals" class="space-y-4"></div></div>
-  </div>
-</section>
+  <script>
+    const runBtn = document.getElementById("runBtn");
+    const urlInput = document.getElementById("urlInput");
+    const results = document.getElementById("results");
 
-<section>
-  <h2 class="text-sm font-semibold mb-2">Raw JSON</h2>
-  <pre id="result" class="json-box">// Awaiting input…</pre>
-</section>
+    runBtn.onclick = async () => {
+      const url = urlInput.value.trim();
+      if (!url) return;
 
-<script>
-const GROUPS = {
-  meta: ["Title Precision","Meta Description Integrity","Canonical Clarity","Brand & Technical Consistency"],
-  schema: ["Schema Presence & Validity","Organization Schema","Breadcrumb Schema","Author/Person Schema"],
-  lattice: ["Internal Lattice Integrity","External Authority Signal","Social Entity Links","AI Crawl Fidelity"],
-  content: ["Inference Efficiency"]
-};
+      runBtn.textContent = "Running...";
+      runBtn.disabled = true;
 
-const TIER_MAP = {
-  tier1: ["Inference Efficiency","Internal Lattice Integrity","External Authority Signal","Social Entity Links","AI Crawl Fidelity"],
-  tier2: ["Schema Presence & Validity","Organization Schema","Breadcrumb Schema","Author/Person Schema"],
-  tier3: ["Title Precision","Meta Description Integrity","Canonical Clarity","Brand & Technical Consistency"]
-};
+      const res = await fetch("/api/audit", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ url })
+      });
 
-const color = pct => pct >= 80 ? "bg-green-500" : pct >= 60 ? "bg-yellow-400" : pct >= 40 ? "bg-orange-400" : "bg-red-500";
+      const data = await res.json();
+      render(data);
 
-const renderSignal = s => {
-  const pct = Math.round((s.points / s.max) * 100);
-  const d = document.createElement("div");
-  d.innerHTML = `
-    <div class="flex justify-between text-xs mb-1">
-      <span class="font-medium">${s.key}</span>
-      <span>${s.points}/${s.max}</span>
-    </div>
-    <div class="h-2 bg-gray-200 rounded">
-      <div class="h-2 rounded ${color(pct)}" style="width:${pct}%"></div>
-    </div>
-    <div class="text-[11px] text-gray-500">${s.notes || ""}</div>
-  `;
-  return d;
-};
+      runBtn.textContent = "Run Audit";
+      runBtn.disabled = false;
+    };
 
-const computeTier = (b, keys) => {
-  let raw = 0, max = 0;
-  b.forEach(s => keys.includes(s.key) && ((raw += s.points),(max += s.max)));
-  return { raw, max, pct: max ? Math.round(raw / max * 100) : 0 };
-};
+    function render(data) {
+      results.classList.remove("hidden");
 
-const setTier = (scoreEl, barEl, metaEl, t) => {
-  scoreEl.textContent = `${t.pct}/100`;
-  barEl.style.width = `${t.pct}%`;
-  barEl.className = `h-2 rounded ${color(t.pct)}`;
-  metaEl.textContent = `Raw ${t.raw} / ${t.max}`;
-};
+      document.getElementById("entityName").textContent = data.hostname;
+      document.getElementById("quadrant").textContent = data.quadrant;
 
-const deriveCrawlHealth = ch => {
-  let score = 50, notes = [];
-  if (ch.mode === "rendered") { score += 20; notes.push("Rendered crawl"); }
-  if (ch.wordCount >= 1500) { score += 20; notes.push("Deep content"); }
-  if (ch.internalLinkRatio === 1) { score += 20; notes.push("Perfect lattice"); }
-  return { score: Math.min(score,100), category: ch.mode, notes };
-};
+      document.getElementById("interpretation").textContent =
+        `${data.ecc.band.toUpperCase()} capability · ${data.intent.posture.toUpperCase()} intent`;
 
-document.getElementById("runButton").onclick = async () => {
-  const input = urlInput.value.trim();
-  if (!input) return;
-  const url = input.startsWith("http") ? input : `https://${input}`;
+      // Chips
+      chip("capabilityChip", `Capability: ${data.ecc.band}`, data.ecc.band);
+      chip("intentChip", `Intent: ${data.intent.posture}`, data.intent.posture);
+      chip("observedChip", `Observed: ${data.intent.observedFrom.join(", ")}`, "neutral");
 
-  const res = await fetch(`https://exmxc-audit.vercel.app/api/audit?url=${encodeURIComponent(url)}`, {
-    headers: { "x-exmxc-key": "exmxc-internal" }
-  });
-  const data = await res.json();
-  result.textContent = JSON.stringify(data, null, 2);
-  timestamp.textContent = `Last run: ${new Date().toLocaleString()}`;
+      // Capability bar
+      const bar = document.getElementById("capabilityBar");
+      bar.style.width = `${data.ecc.score}%`;
+      bar.className = `h-4 ${bandColor(data.ecc.band)}`;
 
-  const score = data.entityScore;
-  scoreDisplay.textContent = `EEI: ${score} / 100`;
-  scoreBar.style.width = `${score}%`;
-  scoreBar.className = `h-3 rounded-full ${color(score)}`;
-  scoreBadge.textContent = data.entityStage;
-  scoreBadge.className = `badge ${score >= 80 ? "bg-green-100 text-green-800" : "bg-yellow-100"}`;
+      document.getElementById("capabilityScore").textContent =
+        `${data.ecc.score} / 100`;
 
-  entityName.textContent = `Entity: ${data.entityName}`;
-  entityStage.textContent = data.entityStage;
-  entityVerb.textContent = data.entityVerb;
-  entityFocus.textContent = data.entityFocus;
+      // Intent signals
+      const intentList = document.getElementById("intentSignals");
+      intentList.innerHTML = "";
+      if (data.intent.signals.length === 0) {
+        intentList.innerHTML = "<li>No explicit AI-forward behavior detected.</li>";
+      } else {
+        data.intent.signals.forEach(s => {
+          const li = document.createElement("li");
+          li.textContent = s;
+          intentList.appendChild(li);
+        });
+      }
 
-  metaSignals.innerHTML = schemaSignals.innerHTML = latticeSignals.innerHTML = contentSignals.innerHTML = "";
-  data.breakdown.forEach(s => {
-    if (GROUPS.meta.includes(s.key)) metaSignals.appendChild(renderSignal(s));
-    if (GROUPS.schema.includes(s.key)) schemaSignals.appendChild(renderSignal(s));
-    if (GROUPS.lattice.includes(s.key)) latticeSignals.appendChild(renderSignal(s));
-    if (GROUPS.content.includes(s.key)) contentSignals.appendChild(renderSignal(s));
-  });
+      // Breakdown
+      const breakdown = document.getElementById("breakdown");
+      breakdown.innerHTML = "";
+      data.breakdown.forEach(b => {
+        const row = document.createElement("div");
+        row.className = "flex justify-between border-b border-slate-800 py-1";
+        row.innerHTML = `
+          <span>${b.key}</span>
+          <span class="muted">${b.points}/${b.max}</span>
+        `;
+        breakdown.appendChild(row);
+      });
+    }
 
-  setTier(tier1Score, tier1Bar, tier1Meta, computeTier(data.breakdown, TIER_MAP.tier1));
-  setTier(tier2Score, tier2Bar, tier2Meta, computeTier(data.breakdown, TIER_MAP.tier2));
-  setTier(tier3Score, tier3Bar, tier3Meta, computeTier(data.breakdown, TIER_MAP.tier3));
+    function chip(id, text, band) {
+      const el = document.getElementById(id);
+      el.textContent = text;
+      el.className = `px-3 py-1 rounded-full text-sm ${bandColor(band)}`;
+    }
 
-  const ch = deriveCrawlHealth(data.crawlHealth);
-  crawlHealthScore.textContent = `${ch.score}/100`;
-  crawlHealthScore.className = `badge ${color(ch.score)} text-white`;
-  crawlHealthCategory.textContent = ch.category;
-  crawlHealthNotes.innerHTML = ch.notes.map(n => `<li>${n}</li>`).join("");
-};
-</script>
-
+    function bandColor(band) {
+      if (band === "high") return "bg-emerald-600";
+      if (band === "medium") return "bg-amber-600";
+      if (band === "low") return "bg-rose-600";
+      return "bg-slate-600";
+    }
+  </script>
 </body>
 </html>
