--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>EEI Internal Audit — exmxc.ai</title>
+  <title>EEI Internal Audit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     :root {
-      --bg: #070b14;
-      --panel: #0d1424;
-      --border: #1f2a44;
-      --text: #e6ebf5;
-      --muted: #9aa4bf;
-
-      --green: #11c37a;
-      --yellow: #f2a900;
-      --red: #e5395f;
-      --blue: #4f7cff;
+      --bg: #050914;
+      --panel: #0b1224;
+      --border: #1e2a4a;
+      --text: #e6ebff;
+      --muted: #9aa4c7;
+      --accent: #4f7cff;
+      --green: #19c37d;
+      --red: #ef4444;
     }
 
     * { box-sizing: border-box; }
-
     body {
       margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: radial-gradient(circle at top, #0b1224, var(--bg));
+      background: radial-gradient(circle at top, #0a1024, #030611);
       color: var(--text);
     }
+
+    h1 { margin-bottom: 12px; }
 
     .container {
       max-width: 1200px;
@@ -34,54 +33,43 @@
       padding: 0 20px;
     }
 
-    h1 {
-      font-size: 22px;
-      margin-bottom: 16px;
-      font-weight: 600;
-    }
-
     /* INPUT */
     .input-row {
       display: flex;
       gap: 12px;
-      margin-bottom: 28px;
+      margin-bottom: 24px;
     }
 
     input {
       flex: 1;
       padding: 14px 16px;
-      border-radius: 8px;
+      border-radius: 10px;
       border: 1px solid var(--border);
       background: var(--panel);
       color: var(--text);
-      font-size: 15px;
+      font-size: 16px;
     }
 
     button {
       padding: 14px 22px;
-      border-radius: 8px;
+      border-radius: 10px;
       border: none;
-      background: var(--blue);
+      background: linear-gradient(135deg, #4f7cff, #6f9bff);
       color: white;
       font-weight: 600;
       cursor: pointer;
     }
 
-    button:disabled {
-      opacity: 0.6;
-      cursor: default;
-    }
-
-    /* LAYOUT */
-    .top {
+    /* GRID */
+    .top-grid {
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 28px;
-      margin-bottom: 28px;
+      grid-template-columns: 1.2fr 1fr;
+      gap: 20px;
+      margin-bottom: 20px;
     }
 
     .panel {
-      background: linear-gradient(180deg, #0f1833, var(--panel));
+      background: linear-gradient(180deg, #0b1224, #060b1c);
       border: 1px solid var(--border);
       border-radius: 14px;
       padding: 20px;
@@ -89,277 +77,207 @@
 
     /* QUADRANT */
     .quadrant {
+      position: relative;
+      height: 360px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
       gap: 10px;
-      position: relative;
-      height: 360px;
     }
 
     .quad {
       border: 1px dashed var(--border);
-      border-radius: 10px;
-      padding: 10px;
-      font-size: 13px;
-      color: var(--muted);
-    }
-
-    .quad.active {
-      border-color: var(--blue);
-      color: var(--text);
-      background: rgba(79,124,255,0.08);
-    }
-
-    .quad-title {
-      font-weight: 600;
-      margin-bottom: 4px;
+      border-radius: 12px;
+      padding: 26px 14px 14px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
       font-size: 14px;
+    }
+
+    .quad strong {
+      margin-bottom: 6px;
     }
 
     .center-score {
       position: absolute;
-      top: 50%;
+      top: 47%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      background: radial-gradient(circle at top, #14204a, #0b1224);
-      border: 2px solid var(--blue);
+      background: #060b1c;
+      border: 2px solid var(--accent);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
+      z-index: 5;
     }
 
-    .score {
+    .center-score span {
       font-size: 34px;
       font-weight: 700;
     }
 
-    .score-label {
-      font-size: 12px;
+    .center-score small {
       color: var(--muted);
+      font-size: 12px;
     }
 
     /* STRATEGY */
     .strategy h3 {
-      margin: 0 0 12px 0;
-      font-size: 16px;
-    }
-
-    .pros, .cons {
-      margin-bottom: 14px;
+      margin-top: 0;
     }
 
     ul {
+      margin: 8px 0 16px;
       padding-left: 18px;
-      margin: 6px 0;
     }
 
-    li {
-      margin-bottom: 6px;
-      font-size: 14px;
+    /* SIGNALS */
+    .signals, details {
+      margin-top: 16px;
     }
 
-    /* LOWER */
-    .lower {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 18px;
-    }
-
-    details {
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 14px 18px;
-      background: var(--panel);
-    }
-
-    summary {
+    details summary {
       cursor: pointer;
       font-weight: 600;
-      font-size: 14px;
+      margin-bottom: 8px;
     }
 
     pre {
-      margin-top: 14px;
-      background: #050914;
-      border-radius: 8px;
+      background: #020617;
       padding: 14px;
+      border-radius: 10px;
       overflow-x: auto;
       font-size: 12px;
-      color: #cfd6ff;
     }
-
-    .muted { color: var(--muted); }
   </style>
 </head>
 
 <body>
-<div class="container">
+  <div class="container">
+    <h1>EEI Internal Audit</h1>
 
-  <h1>EEI Internal Audit</h1>
-
-  <div class="input-row">
-    <input id="urlInput" placeholder="example.com" />
-    <button id="runBtn">Run Audit</button>
-  </div>
-
-  <div id="result" style="display:none">
-
-    <div class="top">
-
-      <!-- QUADRANT -->
-      <div class="panel">
-        <div class="quadrant" id="quadrant">
-          <div class="quad" data-q="AI-First Leader">
-            <div class="quad-title">🚀 AI-First Leader</div>
-            High Capability · High Intent
-          </div>
-          <div class="quad" data-q="Sovereign / Defensive Power">
-            <div class="quad-title">🏰 Sovereign / Defensive Power</div>
-            High Capability · Low Intent
-          </div>
-          <div class="quad" data-q="Aspirational Challenger">
-            <div class="quad-title">🌱 Aspirational Challenger</div>
-            Medium Capability · High Intent
-          </div>
-          <div class="quad" data-q="Cautious Optimizer">
-            <div class="quad-title">⚖️ Cautious Optimizer</div>
-            Medium Capability · Medium Intent
-          </div>
-
-          <div class="center-score">
-            <div class="score" id="score">—</div>
-            <div class="score-label">Capability</div>
-          </div>
-        </div>
-      </div>
-
-      <!-- STRATEGY -->
-      <div class="panel strategy">
-        <h3>Strategy — Pros / Cons</h3>
-
-        <div class="pros">
-          <strong>Pros</strong>
-          <ul id="pros"></ul>
-        </div>
-
-        <div class="cons">
-          <strong>Cons</strong>
-          <ul id="cons"></ul>
-        </div>
-
-        <div class="muted" id="posture"></div>
-      </div>
-
+    <div class="input-row">
+      <input id="urlInput" placeholder="example.com" />
+      <button id="runBtn">Run Audit</button>
     </div>
 
-    <div class="lower">
+    <div id="results" style="display:none;">
+      <div class="top-grid">
+        <!-- QUADRANT -->
+        <div class="panel">
+          <div class="quadrant">
+            <div class="quad">
+              <strong>🚀 AI-First Leader</strong>
+              High Capability · High Intent
+            </div>
+            <div class="quad">
+              <strong>🏰 Sovereign / Defensive Power</strong>
+              High Capability · Low Intent
+            </div>
+            <div class="quad">
+              <strong>🌱 Aspirational Challenger</strong>
+              Medium Capability · High Intent
+            </div>
+            <div class="quad">
+              <strong>⚖️ Cautious Optimizer</strong>
+              Medium Capability · Medium Intent
+            </div>
 
-      <div class="panel">
+            <div class="center-score">
+              <span id="score">–</span>
+              <small>Capability</small>
+            </div>
+          </div>
+        </div>
+
+        <!-- STRATEGY -->
+        <div class="panel strategy">
+          <h3>Strategy — Pros / Cons</h3>
+          <div id="strategyBox"></div>
+        </div>
+      </div>
+
+      <!-- SIGNALS -->
+      <div class="panel signals">
         <strong>AI Intent Signals (Observed)</strong>
-        <ul id="intentSignals" class="muted"></ul>
+        <ul id="signalsList"></ul>
       </div>
 
-      <details>
+      <!-- EVIDENCE -->
+      <details class="panel">
         <summary>View Evidence</summary>
-        <pre id="breakdown"></pre>
+        <pre id="evidence"></pre>
       </details>
 
-      <details>
+      <!-- RAW JSON -->
+      <details class="panel">
         <summary>Raw JSON (Internal)</summary>
-        <pre id="raw"></pre>
+        <pre id="rawJson"></pre>
       </details>
-
     </div>
-
   </div>
-
-</div>
 
 <script>
-const STRATEGY = {
-  "🚀 AI-First Leader": {
-    pros: [
-      "Compounds authority in AI-native discovery",
-      "Sets default framing for category",
-      "Hard to displace once entrenched"
-    ],
-    cons: [
-      "Higher scrutiny and expectations",
-      "Execution mistakes are amplified"
-    ]
-  },
-  "🏰 Sovereign / Defensive Power": {
-    pros: [
-      "Strong structural control and brand gravity",
-      "Resilient to short-term platform shifts"
-    ],
-    cons: [
-      "AI-native competitors can flank",
-      "Leaves discovery upside unclaimed"
-    ]
-  },
-  "🌱 Aspirational Challenger": {
-    pros: [
-      "Momentum and narrative tailwinds",
-      "Can outlearn incumbents"
-    ],
-    cons: [
-      "Structural weaknesses still visible",
-      "Easy to outrun but hard to defend"
-    ]
-  },
-  "⚖️ Cautious Optimizer": {
-    pros: [
-      "Balanced risk posture",
-      "Incremental gains without exposure"
-    ],
-    cons: [
-      "Rarely defines the category",
-      "Vulnerable to decisive moves by others"
-    ]
-  }
-};
-
 const runBtn = document.getElementById("runBtn");
-const input = document.getElementById("urlInput");
+const results = document.getElementById("results");
 
 runBtn.onclick = async () => {
+  const url = document.getElementById("urlInput").value.trim();
+  if (!url) return;
+
   runBtn.disabled = true;
   runBtn.textContent = "Running…";
+  results.style.display = "none";
 
-  const url = input.value.trim();
-  const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`);
-  const data = await res.json();
+  const controller = new AbortController();
+  const timeout = setTimeout(() => controller.abort(), 12000);
 
-  document.getElementById("result").style.display = "block";
+  let data;
+  try {
+    const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`, {
+      signal: controller.signal
+    });
+    data = await res.json();
+  } catch {
+    alert("Audit timed out — bot defense likely. Classified as LOW intent.");
+    runBtn.disabled = false;
+    runBtn.textContent = "Run Audit";
+    return;
+  }
+
+  clearTimeout(timeout);
+
   document.getElementById("score").textContent = data.ecc.score;
 
-  document.querySelectorAll(".quad").forEach(q => q.classList.remove("active"));
-  document.querySelector(`[data-q="${data.quadrant.replace("🚀 ","").replace("🏰 ","").replace("🌱 ","").replace("⚖️ ","")}"]`)?.classList.add("active");
+  document.getElementById("signalsList").innerHTML =
+    data.intent.signals.map(s => `<li>${s}</li>`).join("");
 
-  const strat = STRATEGY[data.quadrant] || { pros: [], cons: [] };
-  document.getElementById("pros").innerHTML = strat.pros.map(p => `<li>${p}</li>`).join("");
-  document.getElementById("cons").innerHTML = strat.cons.map(c => `<li>${c}</li>`).join("");
-
-  document.getElementById("posture").textContent =
-    `Capability: ${data.ecc.band.toUpperCase()} · Intent: ${data.intent.posture.toUpperCase()}`;
-
-  document.getElementById("intentSignals").innerHTML =
-    data.intent.signals.length
-      ? data.intent.signals.map(s => `<li>${s}</li>`).join("")
-      : "<li>No explicit AI-forward signals observed.</li>";
-
-  document.getElementById("breakdown").textContent =
-    JSON.stringify(data.breakdown, null, 2);
-
-  document.getElementById("raw").textContent =
+  document.getElementById("rawJson").textContent =
     JSON.stringify(data, null, 2);
 
+  document.getElementById("evidence").textContent =
+    JSON.stringify(data.breakdown, null, 2);
+
+  document.getElementById("strategyBox").innerHTML = `
+    <strong>Pros</strong>
+    <ul>
+      <li>Strong structural control and brand gravity</li>
+      <li>Resilient to short-term platform shifts</li>
+    </ul>
+    <strong>Cons</strong>
+    <ul>
+      <li>AI-native competitors can flank</li>
+      <li>Discovery upside remains unclaimed</li>
+    </ul>
+    <div><em>Capability: ${data.ecc.band.toUpperCase()} · Intent: ${data.intent.posture.toUpperCase()}</em></div>
+  `;
+
+  results.style.display = "block";
   runBtn.disabled = false;
   runBtn.textContent = "Run Audit";
 };
