--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Internal Entiry Clarity Review</title>
+<title>Internal Entity Clarity Review</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <style>
